force-app/main/default/objects/HAM_Group_Comment__c/HAM_Group_Comment__c.object-meta.xml
<CustomObject>
    <label>HAM Group Comment</label>
    <nameField>
        <displayFormat>COM-{0000}</displayFormat>
        <label>HAM Group Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Group Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>