force-app/main/default/objects/HAM_Group_Comment__c/fields/HAM_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>HAM_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>HAM_Group_Member__c</referenceTo>
    <relationshipLabel>HAM Group Comments</relationshipLabel>
    <relationshipName>HAM_Group_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>