force-app/main/default/objects/HAM_Group_Comment__c/fields/Mentioned_Contact_Ids__c.field-meta.xml
<CustomField>
    <fullName>Mentioned_Contact_Ids__c</fullName>
    <label>Mentioned Contact Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>