force-app/main/default/objects/HAM_Group_Comment__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>HAM Group Post</label>
    <referenceTo>HAM_Group_Post__c</referenceTo>
    <relationshipLabel>HAM Group Comments</relationshipLabel>
    <relationshipName>HAM_Group_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>